--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,160 +1,170 @@
 /* reset CSS */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 16px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 16px;
 }
 
 /* body */
 body {
-    --background-color: #333940;
-    --text-color-main: #e867ed;
-    --text-color-secondary: #e0eae5;
-    --selected-text-color: #333940;
-    --selected-text-background-color: #47cdb4;
-    --gradient-color: rgba(232, 102, 236);
-    --gradient-color-full: rgba(232, 102, 236, 1);
-    --gradient-color-start: rgba(232, 102, 236, 0.3);
-    --gradient-color-end: rgba(232, 102, 236, 0.6);
-    background-color: var(--background-color);
+  --background-color: #333940;
+  --text-color-main: #e867ed;
+  --text-color-secondary: #e0eae5;
+  --selected-text-color: #333940;
+  --selected-text-background-color: #47cdb4;
+  --glow-color: rgba(232 102 236 / 100%);
+  --gradient-color-start: rgba(232 102 236 / 10%);
+  --gradient-color-end: rgba(232 102 236 / 90%);
+
+  background-color: var(--background-color);
 }
 
 /* header */
 header {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    width: 90%;
-    margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  width: 90%;
+  margin: 2rem;
 }
 
 header h1 {
-    color: var(--text-color-main, 1);
-    font-size: 2rem;
-    font-weight: 700;
+  color: var(--text-color-main, 1);
+  font-size: 2rem;
+  font-weight: 700;
 }
 
 header p {
-    color: var(--text-color-secondary, 1);
-    font-size: 0.9rem;
-    font-weight: 400;
-    margin: 1rem 3rem;
+  color: var(--text-color-secondary, 1);
+  font-size: 0.9rem;
+  font-weight: 400;
+  margin: 1rem 3rem;
 }
 
 main {
-    width: 100%;
-    padding: 0.5rem;
+  width: 100%;
+  padding: 0.5rem;
 }
 
 .main-grid {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: repeat(6, 1fr);
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(6, 1fr);
 }
 
 .code-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: start;
-    border-width: 2px;
-    border-style: dashed;
-    border-color: var(--text-color-secondary);
-    padding: 0 1rem 0 1rem;
-    margin-bottom: 2.0rem;
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
+  border-width: 2px;
+  border-style: dashed;
+  border-color: var(--text-color-secondary);
+  padding: 0 1rem;
+  margin-bottom: 2rem;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+  transition: all 0.25s ease-in-out;
 }
 
 .card-header {
-    color: var(--text-color-main);
-    background: var(--background-color);
-    position: relative;
-    width: 100%;
-    top: -20px;
-    font-size: 1.5rem;
-    font-weight: 700;
-    border-color: var(--text-color-secondary);
-    border-width: 2px;
-    border-style: solid;
-    border-radius: 6px;
-    padding: 0 0.5rem 0.2rem;
-}
+  color: var(--text-color-main);
+  background: var(--background-color);
+  position: relative;
+  width: 100%;
+  top: -20px;
+  font-size: 1.5rem;
+  font-weight: 700;
+  border-color: var(--text-color-secondary);
+  border-width: 2px;
+  border-style: solid;
+  border-radius: 8px;
+  padding: 0 0.5rem 0.2rem;
 
-.code-card .card-header {
-    border-radius: 8px;
-    transition: all 0.5s ease-in-out;
-}
-
-.code-card:hover,
-.card-header:hover .card-header {
-    box-shadow: inset 0px 0px 8px var(--gradient-color-full), 0 0 15px var(--gradient-color);
+  /* transition for glow effect */
+  transition: inherit;
 }
 
 .code-card p {
-    color: var(--text-color-main);
-    font-size: 0.8rem;
-    font-weight: 400;
-    margin: 0;
-    padding: 0;
+  color: var(--text-color-main);
+  font-size: 0.8rem;
+  font-weight: 400;
+  margin: 0;
+  padding: 0;
+}
+
+.code-card:hover .card-header,
+.code-card:hover {
+  box-shadow: inset 0 0 8px var(--glow-color), 0 0 15px var(--glow-color);
 }
 
 .code-card pre {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    width: 100%;
-    flex: 1;
-    color: var(--text-color-secondary);
-    background: linear-gradient(var(--gradient-color-start) 0%,
-            var(--gradient-color-end) 100%);
-    margin: 1rem 0;
-    border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  width: 100%;
+  flex: 1;
+  color: var(--text-color-secondary);
+  transition: all 0.25s ease-in-out;
+  background: linear-gradient(
+    var(--gradient-color-start) 10%,
+    var(--gradient-color-end) 100%
+  );
+  margin: 1rem 0;
+  border-radius: 8px;
 }
 
-.code_snippet {
-    color: var(--text-color-secondary);
-    font-family: 'Roboto Mono', Consolas, Menlo, 'Lucida Console', 'courier new', monospace;
-    font-size: 0.8rem;
-    font-weight: 400;
-    margin: 0rem .5rem;
-    padding: 0.5rem 0;
-    -webkit-user-select: all;
-    user-select: all;
+.code-card pre:hover {
+  background: linear-gradient(
+    var(--gradient-color-start) 0%,
+    var(--gradient-color-end) 70%
+  );
 }
 
-.code_snippet::selection {
-    background-color: var(--selected-text-background-color);
-    color: var(--selected-text-color);
+.code-snippet {
+  color: var(--text-color-secondary);
+  font-family: "Roboto Mono", Consolas, Menlo, "Lucida Console", "courier new",
+    monospace;
+  font-size: 0.8rem;
+  font-weight: 400;
+  margin: 0 0.5rem;
+  padding: 0.5rem 0;
+  user-select: all;
+  cursor: pointer;
+}
+
+.code-snippet::selection {
+  background-color: var(--selected-text-background-color);
+  color: var(--selected-text-color);
 }
 
 footer {
-    text-align: center;
-    margin: -1rem;
+  text-align: center;
+  margin-bottom: 2rem;
+  margin-top: -1rem;
 }
 
 footer h3 {
-    color: var(--text-color-main);
-    font-size: 1.2rem;
-    font-weight: 700;
+  color: var(--text-color-main);
+  font-size: 1.2rem;
+  font-weight: 700;
 }
 
-@media screen and (min-width:768px) and (max-width: 991px) {
-    .main-grid {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-    }
+@media screen and (min-width: 768px) and (max-width: 991px) {
+  .main-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+  }
 }
-    
 
 @media screen and (min-width: 992px) {
-    .main-grid {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-    }
+  .main-grid {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
 }
-    
